# mailgreen-server

./: .gitignore  pyproject.toml
mailgreen/: function_specs.py
mailgreen-db/: alembic.ini
mailgreen-db/migrations/: env.py
mailgreen-db/migrations/versions/: 2e7fbc5d9f0b_create_major_topic_major_topic_.py  311ee75c0e9f_add_history_id_to_analysis_tasks.py  377fb1bec77a_add_subscription_table.py  610c547e2ca2_baseline_schema.py  c0a447889f9f_create_user_protected_sender.py  c1b624571f02_add_user_credentials_table.py  cf3be5d7a091_modify_mail_embeddings_drop_carbon__add_.py  fc01e5f745cd_alter_mail_embeddings_vector_to_384_dims.py
mailgreen/app/: config.py  database.py  main.py  models.py
mailgreen/app/schemas/: keyword.py  mail.py  subscription.py
mailgreen/controller/: __init__.py  ai_controller.py  auth_controller.py  carbon_controller.py  keyword_controller.py  mail_controller.py  sender_controller.py  star_lable_controller.py  subscription_controller.py  trash_controller.py
mailgreen/services/: ai_service.py  assign_topic_service.py  auth_service.py  carbon_service.py  embed_service.py  keyword_service.py  mail_service.py  sender_service.py  star_lable_service.py  subscription_service.py  subscription_utils.py  trash_service.py
mailgreen/tasks/: mail_analysis.py
